[metadata]
name = PyMuJoCoBase
version = 1.0.0
description = Base class for running simulations in MuJoCo with its Python bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BolunDai0216/PyMuJoCoBase
author = Bolun Dai
author_email = bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    pymjbase-biped-example = PyMuJoCoBase.examples.example_biped:main
    pymjbase-pendulum-example = PyMuJoCoBase.examples.example_control_pendulum:main
    pymjbase-dbpendulum-example = PyMuJoCoBase.examples.example_dbpendulum:main
    pymjbase-gymnast-example = PyMuJoCoBase.examples.example_gymnast:main
    pymjbase-hopper-example = PyMuJoCoBase.examples.example_hopper:main
    pymjbase-ivp-example = PyMuJoCoBase.examples.example_ivp:main
    pymjbase-leg-swing-example = PyMuJoCoBase.examples.example_leg_swing:main
    pymjbase-manipulator-drawing-example = PyMuJoCoBase.examples.example_manipulator_drawing:main
    pymjbase-manipulator-ik-example = PyMuJoCoBase.examples.example_manipulator_ik:main
    pymjbase-projectile-example = PyMuJoCoBase.examples.example_projectile:main
    pymjbase-underactuated-pendulum-example = PyMuJoCoBase.examples.example_underactuated_pendulum:main
